--- a/Web.Statu/Views/Data/DetailText.cshtml
+++ b/Web.Statu/Views/Data/DetailText.cshtml
@@ -9,6 +9,8 @@
     ViewBag.Title = Model.Dataset.Registration().name + " - textová podoba dokumentu";
     bool found = false;
 
+
+
     JObject jobj = JObject.Parse(Model.Dataset.GetData(Model.Data));
 
     string path = Request.QueryString["p"];
@@ -33,6 +35,23 @@
         plainText = System.Text.RegularExpressions.Regex.Replace(plainText, "^(\\s)*", "");
         found = true;
     }
+
+    Newtonsoft.Json.Linq.JObject itemjmodel = Model.Dataset.GetDataObj(Model.Data);
+    dynamic itemModel = (dynamic)itemjmodel;
+
+    ViewBag.SocialShareTitle = $"<b>{ViewBag.Title}</b>";
+    ViewBag.SocialShareText =  Devmasters.Core.TextUtil.ShortenText(plainText,400);
+    ViewBag.SocialShareHtml = $"<pre style='overflow-x: auto;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;word-wrap: break-word;'>{plainText}</pre>";
+
+    ViewBag.SocialShareHtmlFooter = Model.Dataset.DatasetItemUrl(Model.Data,false) ;
+    ViewBag.SocialShareHtmlSubFooter = $"<b>Hlídáme je, protože si to zaslouží!</b>";
+    ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/page?d={DateTime.Now.ToString("d.M.yy")}&v=" + Url.Encode(Request.Url.AbsoluteUri);
+    ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
+            + "<meta property=\"og:image:height\" content=\"1080\" />"
+            + "<meta property=\"og:image:type\" content=\"image/png\" />"
+            ;
+
+
 }
 
 
@@ -45,7 +64,7 @@
         <li><a href="/">Hlídač Státu</a></li>
         <li><a href="/data">Další databáze</a></li>
         <li><a href="@Model.Dataset.DatasetUrl()">@Model.Dataset.Registration().name</a></li>
-        <li><a href="https://www.hlidacstatu.cz/data/Detail/@Model.Dataset.Registration().datasetId/@ViewBag.Id">@ViewBag.Id</a></li>
+        <li><a href="https://www.hlidacstatu.cz/data/Detail/@Model.Dataset.Registration().datasetId/@Model.Data">@Model.Data</a></li>
         <li class="active">Obsah dokumentu</li>
     </ol>
 }
@@ -56,6 +75,7 @@
         <b>Upozornění</b>: Text přílohy byl získán strojově a nemusí přesně odpovídat originálu. Zejména u strojově nečitelných smluv, kde jsme použili OCR.
         <a href="@url" target="_blank">originál dokumentu stáhnete odsud</a>
     </p>
+    <p><a href="https://www.hlidacstatu.cz/data/Detail/@Model.Dataset.Registration().datasetId/@Model.Data">Celý záznam @Model.Data najdete zde</a></p>
 
     <hr />
     <div class="row">
@@ -69,7 +89,8 @@
 }
 else
 {
-    <span class="text-danger">Odkazovaný dokument nebyl nalezena</span>
+    <div class="text-danger">Odkazovaný dokument nebyl nalezena</div>
+    <p><a href="https://www.hlidacstatu.cz/data/Detail/@Model.Dataset.Registration().datasetId/@Model.Data">Zpět na celý záznam</a></p>
 }
 
 
