--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -178,7 +178,7 @@
                     </span>
                     <span class="tag">
                         <a href="https://www.hlidacstatu.cz/texty/system-elektronicke-dalnicni-znamky-za-401-milionu-se-zatim-nesmi-realizovat-zrusi-se/">
-                            Systém elektronické dálniční známky za 401 miliónu se zatím nesmí realizovat. Zruší se?
+                            Systém za 401 miliónu se zatím nesmí realizovat. Zruší se?
                             <span class="glyphicon glyphicon-share"></span>
                         </a>
                     </span>
