Odstranění účtú, kosmetika v administraci

--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -110,25 +110,10 @@
                         </ul>
                     </dd>
                     <dt>
-                        Hledat mezi vsemi osobami
+                        Hledání a editace osob
                     </dt>
                     <dd>
-                        <form action="/manage/findperson" method="get" class="form-inline">
-                            <div class="form-group">
-                                <label for="jmeno">Jmeno</label>
-                                <input type="text" class="form-control" id="jmeno" name="jmeno" placeholder="Jmeno">
-                            </div>
-                            <div class="form-group">
-                                <label for="prijmeni">Prijmeni</label>
-                                <input type="text" class="form-control" id="prijmeni" name="prijmeni" placeholder="Prijmeni">
-                            </div>
-                            <div class="form-group">
-                                <label for="narozeni">Jmeno</label>
-                                <input type="date" class="form-control" id="narozeni" name="narozeni" placeholder="Datum narozeni">
-                            </div>
-                            <button type="submit" class="btn btn-default">Hledej</button>
-
-                        </form>
+                        <a href="/manage/findperson">Hledat osobu</a>
                     </dd>
 
                     <dt>Debug info:</dt>
