--- a/Web.Statu/Views/Manage/FindPerson.cshtml
+++ b/Web.Statu/Views/Manage/FindPerson.cshtml
@@ -21,7 +21,7 @@
                 <input type="text" class="form-control" id="narozeni" name="narozeni" placeholder="Rok narozeni" value="@(Request.Params["narozeni"])">
             </div>
             <div class="form-group">
-                <label for="prijmeni">Rozšířit hledání</label>
+                <label for="prijmeni">Hledat i mezi nepolitiky</label>
                 <input type="checkbox" class="form-control" id="extendSearch" name="extendSearch" placeholder="extendSearch" @checkedattr value="true">
             </div>
             <button type="submit" class="btn btn-primary">Hledej</button>
