Removing another references to Transparentini Ucty

--- a/Web.Statu/Views/ApiV1/UX.cshtml
+++ b/Web.Statu/Views/ApiV1/UX.cshtml
@@ -263,7 +263,7 @@
                     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-9 verticaltab">
 
                         <div class="verticaltab-content active">
-                            Nalezli jsme <b>1 bankovní transakci </b>(celkem <b>10 000  Kč</b>)s politickými stranami s osobou se jménem <b>Jan Hušbauer</b>.<a href="/ucty/hledat?q=Jan+Hu%C5%A1bauer">Ukázat tyto bankovní transakce</a><br><span class="text-info">Upozornění: Jedná se o transakce ve kterých se vyskytuje osoba stejného jména. Nemusí jít o stejnou osobu.</span>
+                            Nalezli jsme <b>1 bankovní transakci </b>(celkem <b>10 000  Kč</b>)s politickými stranami s osobou se jménem <b>Jan Hušbauer</b>.<br><span class="text-info">Upozornění: Jedná se o transakce ve kterých se vyskytuje osoba stejného jména. Nemusí jít o stejnou osobu.</span>
                         </div>
                         <div class="verticaltab-content ">
                             <a href="https://www.facebook.com/sharer/sharer.php?sdk=joey&amp;u=https%3A%2F%2Fwww.hlidacstatu.cz%2Fosoba%2Fjan-husbauer&amp;display=popup&amp;ref=plugin&amp;src=share_button" class="ssk ssk-text ssk-facebook ssk-xs" target="_blank" data-ssk-ready="true">na Facebook</a>
