Oprava chyby v textu

--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -446,7 +446,7 @@
                 placement: 'top',
                 trigger: "hover",
                 title: "Upozornění",
-                content: "Jedná se o naši kopii zveřejněné smlouvy. Nemusí se jedna o stejný, správný či úplný dokument."
+                content: "Jedná se o naši kopii zveřejněné smlouvy. Nemusí se jednat o stejný, správný či úplný dokument."
             });
         });
     </script>
