--- a/Web.Statu/Views/Dotace/_SearchForm.cshtml
+++ b/Web.Statu/Views/Dotace/_SearchForm.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HlidacStatu.Lib.Searching.DotaceSearchResult
 
-
+<div>Databáze ještě neobsahuje všechny dostupné dotace, protože MFČR zatím neuveřejnila aktuální údaje.</div>
 
 <div class="form-search">
     <label class="sr-only" for="I">Hledat v dotac&#xED;ch</label>
