--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -236,6 +236,7 @@
                     <a href="/VerejneZakazky">Veřejné zakázky</a>
                     <a href="/Insolvence">Insolvence</a>
                     <a href="/sponzori">Sponzoři</a>
+                    <a href="/dotace">Dotace</a>
                     <a href="/StatniWeby">Weby státu<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.Zabbix.ZabTools.Weby()?.Count().ToString() ?? "")</sup></a>
                 </li>
 
